--- a/Assignment-1/Assignment-1.ipynb
+++ b/Assignment-1/Assignment-1.ipynb
@@ -71,26 +71,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "113.09733552923254"
+       "904.7786842338603"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from math import pi\n",
-    "def volume(r):\n",
-    "    return 4/3*pi*r**3\n",
-    "volume(3)"
+    "def volume(d=12):\n",
+    "    r=d/2\n",
+    "    return 4/3*pi*(r**3)\n",
+    "volume()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
